# Hello-World-15

./: Backlog penguins file.docx  Hello World15.sln  README.md
Hello World/: CMakeLists.txt  Class1.cs  Default1.aspx
Hello World/CDprojec app/: CDprojec app.sln
Hello World/CDprojec app/CD LIBRARY PROJECT/: CD LIBRARY PROJECT.cpp  CD LIBRARY PROJECT.h  CMakeLists.txt  CMakeSettings.json
Hello World/Music CD/: CMakeLists.txt  Music CD.cpp  Music CD.h
Solution2 - Copy/: Solution2.sln
