# CMakeList.txt : CMake project for Music CD, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Music CD")

# Add source to this project's executable.
add_executable (CMakeTarget "Music CD.cpp" "Music CD.h")

# TODO: Add tests and install targets if needed.
