# CMakeList.txt : CMake project for CD LIBRARY PROJECT, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CD LIBRARY PROJECT")

# Add source to this project's executable.
add_executable (CMakeTarget "CD LIBRARY PROJECT.cpp" "CD LIBRARY PROJECT.h")

# TODO: Add tests and install targets if needed.
